Fix overlapping thumbs

--- a/apps/artwork/stylesheets/index.styl
+++ b/apps/artwork/stylesheets/index.styl
@@ -62,6 +62,7 @@ artwork-detail-item-height  = 36px
   vertical-align middle
   transition background-color 0.125s
   > img
+    display inline-block
     height 100%
   &.is-active
   &[data-state='active']
